# realtime-rem-sleep-detection

./: .gitignore  Makefile  README.md  dataset.py  demo.ipynb  evaluate.py  features.py  module.py  pyproject.toml  splits.py
data/: README.md  featurematrix.npz
data/processed/: featurematrix.npz
notebooks/: 1.0-mm-eda.py  1.1-mm-demo.py  2.0-mm-logreg.py  2.1-mm-xgboost.py  2.2-mm-xgboost-fbeta.py  3.0-mm-comparison.py
remdetect/: config.py  dataset.py  features.py  plots.py  splits.py
remdetect/modeling/: causality.py  compare.py  evaluate.py  model.py  predict.py  train.py  tune.py
tests/: conftest.py  test_causality_guard.py  test_dataset.py  test_features.py  test_fit_contract.py  test_models.py  test_splits.py  test_temporal_features.py  test_tune.py
