[project]
name = "remdetect"
version = "0.1.0"
description = "Real-time REM sleep detection from wearable HR + motion (Walch et al. 2019)"
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.21",
    "scikit-learn>=1.5",  # needs FixedThresholdClassifier
    "pandas>=2.0",        # fast parsing of the raw recordings
    "matplotlib>=3.5",    # confusion + per-fold figure written by plots.py
    "marimo>=0.23",       # reactive notebooks (EDA + model experiments) with marimo pair
    # Model libraries available for experiments, so notebooks and scripts can swap
    # estimators without extra install steps:
    "torch>=2.0,<2.10",   # 2.10+ wheels need macOS 14+ on Apple Silicon
    "xgboost>=2.0",       # gradient boosting (the current model)
    "lightgbm>=4.0",      # gradient boosting
    "tensorflow>=2.16",   # deep learning (Keras backend)
    "keras>=3.0",         # high-level model API
    # Validated feature extractors (features rest on trusted code, not hand-rolled):
    "agcounts>=0.1",      # ActiGraph activity counts (Neishabouri 2022, cited by the paper)
    "pycatch22>=0.4",     # catch22 canonical time-series features
    "tsfel>=0.1",         # general time-series feature extraction library
]

# Optional extras:
#   uv sync --extra test      # to run the test suite
[project.optional-dependencies]
test = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["remdetect"]

[tool.pytest.ini_options]
testpaths = ["tests"]
